--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install selenium
+        pip install selenium==4.2.0
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run
       run: |
