--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,4 +28,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: run
       run: |
-        python test.py
+        python attendance.py
